# Learning-GLFW

./: .gitignore  BASE_CMakeLists.cmake  BASE_CMakeLists.txt  Notes.txt  README.md
DisplayText/: CMakeLists.txt
DisplayText/src/: main.c  shader.frag
DrawCircle/: CMakeLists.txt
DrawCircle/src/: main.c
DrawRect/: CMakeLists.txt  README.md
DrawRect/src/: main.c
DrawTriangle/: CMakeLists.txt  README.md
DrawTriangle/src/: main.cpp
DrawTriangleC/: CMakeLists.txt  README.md
DrawTriangleC/src/: main.c
EmptyWindow/: CMakeLists.txt  README.md
EmptyWindow/src/: main.cpp
GLADColoredWindow/: CMakeLists.txt  README.md
GLADColoredWindow/src/: main.cpp
MultipleModels/: CMakeLists.txt
MultipleModels/src/: main.c  shader_hex.frag  shader_hex.vert  shader_pent.frag  shader_pent.vert  shader_trisqr.vert
ParticleSim/: CMakeLists.txt
ParticleSim/src/: main.c
Shaders/: CMakeLists.txt  README.md
Shaders/src/: main.c  shaders.frag  shaders.vert
Snake/: CMakeLists.txt  README.md
Snake/src/: main.c  square_shader.frag  square_shader.vert
Textures/: CMakeLists.txt  README.md
Textures/src/: main.c  tri.frag  tri.vert
Transformations/: CMakeLists.txt  README.md
Transformations/src/: main.c  tri.frag  tri.vert
Utilities/: README.md  embed_glsl.c
Utilities/Embed/: CMakeLists.txt  embed_glsl.c
Utilities/PointsAboutOrigin/: CMakeLists.txt  main.c
